新增留言版內容

--- a/MvcApplication2/MvcApplication2/Views/Shared/_Layout.cshtml
+++ b/MvcApplication2/MvcApplication2/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+        <title>@ViewBag.Title - My ASP.NET MVC Application主要樣板</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
@@ -31,7 +31,7 @@
         <div id="body">
             @RenderSection("featured", required: false)
             <section class="content-wrapper main-content clear-fix">
-                @RenderBody()
+                @RenderBody()<!--- 套用此主板的view內容會被載入到這裡  ---->
             </section>
         </div>
         <footer>
