--- a/MvcApplication2/MvcApplication2/Views/Shared/_Layout.cshtml
+++ b/MvcApplication2/MvcApplication2/Views/Shared/_Layout.cshtml
@@ -20,9 +20,10 @@
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                            <li>@Html.ActionLink("首頁", "Index", "Home")</li>
+                            <li>@Html.ActionLink("關於", "About", "Home")</li>
+                            <li>@Html.ActionLink("聯絡我們", "Contact", "Home")</li>
+                            <li>@Html.ActionLink("新增-留言板", "Index", "Message")</li> <!--- 新增：留言板 ---->
                         </ul>
                     </nav>
                 </div>
