--- a/MvcApplication2/MvcApplication2/Views/Shared/_Layout.cshtml
+++ b/MvcApplication2/MvcApplication2/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>@ViewBag.Title - My ASP.NET MVC Application主要樣板</title>
+        <title>@ViewBag.Title - 我的ASP.NET MVC 應用程式主要樣板</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
@@ -24,6 +24,7 @@
                             <li>@Html.ActionLink("關於", "About", "Home")</li>
                             <li>@Html.ActionLink("聯絡我們", "Contact", "Home")</li>
                             <li>@Html.ActionLink("新增-留言板", "Index", "Message")</li> <!--- 新增：留言板 ---->
+                            <li>@Html.ActionLink("新增-石沐汗坊系統", "Smooth_Index", "Smoothdb")</li> <!--- 新增：石沐汗坊系統 ---->
                         </ul>
                     </nav>
                 </div>
