繼續石沐放坊資料庫處理

--- a/MvcApplication2/MvcApplication2/Views/Shared/_Layout.cshtml
+++ b/MvcApplication2/MvcApplication2/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
+                    <p class="site-title">@Html.ActionLink("網頁LOGO放置處", "Index", "Home")</p>
                 </div>
                 <div class="float-right">
                     <section id="login">
@@ -24,7 +24,7 @@
                             <li>@Html.ActionLink("關於", "About", "Home")</li>
                             <li>@Html.ActionLink("聯絡我們", "Contact", "Home")</li>
                             <li>@Html.ActionLink("新增-留言板", "Index", "Message")</li> <!--- 新增：留言板 ---->
-                            <li>@Html.ActionLink("新增-石沐汗坊系統", "Smooth_Index", "Smoothdb")</li> <!--- 新增：石沐汗坊系統 ---->
+                            <li>@Html.ActionLink("新增-石沐汗坊系統", "Smooth_Index", "Smooth")</li> <!--- 新增：石沐汗坊系統 ---->
                         </ul>
                     </nav>
                 </div>
