--- a/MvcApplication2/MvcApplication2/Views/Smooth/Smooth_Create.cshtml
+++ b/MvcApplication2/MvcApplication2/Views/Smooth/Smooth_Create.cshtml
@@ -10,12 +10,12 @@
 @using (Html.BeginForm("Smooth_Create", "Smooth"))
 {
     <div>
-        @Html.Label("會員報到用電話號碼：");
-        @Html.TextBox("_keyword");
+        @Html.Label("會員報到用電話號碼：")
+        @Html.TextBox("_keyword")
         <br />
-        @Html.Label("本次消費金額");
-        @Html.TextBox("_cost");
+        @Html.Label("本次消費金額")
+        @Html.TextBox("_cost")
         <br />
-        <input type="submit" value="Send_Message" />
+        <input type="submit" value="送出資料" />
     </div>
 }
